# robot

./: .gitignore  .gitmodules  LICENSE  LICENSE.md  Pipfile  README.md  baseline.txt  calibrate_camera.py  flake.nix  main.py  pyproject.toml  setup.py
.github/workflows/: FlakeHell.yml  main.yml  pylint.yml  pythonapp.yml
robot/: __init__.py  apriltags3.py  calibrate_camera.py  cytron.py  fast_capture.py  greengiant.py  log.py  multi-thread.py  reset.py  test_vision.py  vision.py  vision_file.py  wrapper.py
robot/game_config/: __init__.py  markers.py  startup_poems.py  targets.py  teams.py
robot/marker_setup/: __init__.py  markers.py  teams.py
robot/sheepdog_trials/: __init__.py  markers.py  teams.py
robot/vision/: __init__.py  apriltags3.py
robot_backup/: __init__.py  apriltags3.py  calibrate_camera.py  greengiant.py  log.py  reset.py  vision.py  wrapper.py
robot_backup/marker_setup/: __init__.py
test/: harness.py  test_interface.py  test_vision.py  tests.py
