[tool.poetry]
name = "robot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "3.8.0"
flakehell = "^0.9.0"

[tool.poetry.dev-dependencies]

[tool.flakehell]
# Inherit config
base = "https://raw.githubusercontent.com/life4/flakehell/master/pyproject.toml"
format = "grouped"
max_line_length = 100
show_source = true
baseline = "baseline.txt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
